# get_data

./: README.MD  getdata_FMP.py  getdata_insightsentry.py  main.py  pyproject.toml
configs/: dataconfig.yaml
