[project]
name = "get-data"
version = "0.1.0"
description = ""
authors = [
    {name = "gvardovski",email = "gvardovski@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyaml (>=25.7.0,<26.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.124.4,<0.125.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false